src/test/deca/syntax/valid/created/parser/Object/NoMain.deca
// Description:
//  Classe sans main.
// Resultats:
//  Ne fais rien.
class NoMain{

}