src/test/deca/syntax/invalid/created/parser/Object/ClassNotClosed.deca
// Description:
//  Classe non refermée.
// Resultats:
//  ClassNotClosed.deca:5:11: missing '}' at '<EOF>'
class open{